fixed grid issue with div overlapping pad area, changed main grid to stop vertical overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
     --main-blue: hsl(229, 83%, 60%);
-    --grid-dimension: 8;
+    --grid-cell-dim: 16;
+    --grid-actual-dim: 600px;
 }
 
 body {
@@ -10,7 +11,7 @@ body {
 
 #main-container {
     display: grid;
-    grid-template-rows: 1fr 7fr;
+    grid-template-rows: 8vh auto 5vh;
     width: 100vw;
     height: 100vh;
 }
@@ -18,7 +19,7 @@ body {
 header {
     display: grid;
     width: 100%;
-    height: 100%;
+    height: 8vh;
 
     background-color: var(--main-blue);
     color: white;
@@ -26,7 +27,8 @@ header {
 
 main {
     display: grid;
-    grid-template-rows: 1fr 450px 1fr;
+    grid-template-columns: 1fr [pad-col]var(--grid-actual-dim) 1fr;
+    grid-template-rows: 1fr [pad-row]var(--grid-actual-dim) 1fr;
     width: 100%;
     height: 100%;
 }
@@ -44,10 +46,12 @@ header h1 {
 
 #pad {
     display: grid;
-    grid-template-columns: repeat(var(--grid-dimension), auto);
+    grid-template-columns: repeat(var(--grid-cell-dim), auto);
+    grid-column-start: pad-col;
+    grid-row-start: pad-row;
 
-    width: 600px;
-    height: 600px;
+    width: var(--grid-actual-dim);
+    height: var(--grid-actual-dim);
     justify-self: center;
     align-self: center;
 
